--- a/toolkits/sugar-ui/src/scss/03_generic/_classes.scss
+++ b/toolkits/sugar-ui/src/scss/03_generic/_classes.scss
@@ -1,1 +1,35 @@
-@include Sugar.classes('sugar.component');
+@include Sugar.classes(
+    // 'sugar.helper.block'
+    // 'sugar.helper.border'
+    // 'sugar.helper.clear'
+    // 'sugar.helper.clearfix'
+    // 'sugar.helper.color'
+    // 'sugar.helper.display'
+    // 'sugar.helper.filter'
+    // 'sugar.helper.flex'
+    'sugar.helper.font'
+    // 'sugar.helper.link'
+    'sugar.helper.margin'
+    // 'sugar.helper.media'
+    // 'sugar.helper.overflow'
+    'sugar.helper.padding'
+    // 'sugar.helper.pointer'
+    // 'sugar.helper.position'
+    // 'sugar.helper.pull'
+    // 'sugar.helper.ratio'
+    // 'sugar.helper.screen-reader'
+    // 'sugar.helper.size'
+    // 'sugar.helper.text'
+    // 'sugar.helper.transition'
+    // 'sugar.helper.transmation'
+    // 'sugar.helper.user-select'
+    // 'sugar.helper.vertical-align'
+
+    'sugar.component.ol'
+    'sugar.component.title'
+    'sugar.component.paragraph'
+    'sugar.component.button'
+
+    // 'sugar.component.icon'
+    // 'sugar.component.shadow'
+);
