--- a/toolkits/sugar/src/scss/core/list/function/_list-index.scss
+++ b/toolkits/sugar/src/scss/core/list/function/_list-index.scss
@@ -28,5 +28,9 @@
     @return -1;
   }
 
-  @return list.index($list, $value);
+  $idx: list.index($list, $value);
+  @if $idx == null or $idx == -1 {
+    @return -1;
+  }
+  @return $idx;
 }
