--- a/toolkits/sugar/src/scss/_classes.scss
+++ b/toolkits/sugar/src/scss/_classes.scss
@@ -1,40 +1,34 @@
 @mixin generate-classes() {
+  // helpers
+  @include classes-helper-block();
+  @include classes-helper-border();
+  @include classes-helper-clear();
+  @include classes-helper-clearfix();
+  @include classes-helper-color();
+  @include classes-helper-display();
+  @include classes-helper-filter();
+  @include classes-helper-flex();
+  @include classes-helper-font();
+  @include classes-helper-link();
+  @include classes-helper-margin();
+  @include classes-helper-media();
+  @include classes-helper-overflow();
+  @include classes-helper-padding();
+  @include classes-helper-pointer();
+  @include classes-helper-position();
+  @include classes-helper-pull();
+  @include classes-helper-ratio();
+  @include classes-helper-screen-reader();
+  @include classes-helper-size();
+  @include classes-helper-text();
+  @include classes-helper-transition();
+  @include classes-helper-transmation();
+  @include classes-helper-user-select();
+  @include classes-helper-vertical-align();
 
-    // helpers
-    @include classes-helper-block();
-    @include classes-helper-border();
-    @include classes-helper-clear();
-    @include classes-helper-clearfix();
-    @include classes-helper-color();
-    @include classes-helper-display();
-    @include classes-helper-filter();
-    @include classes-helper-flex();
-    @include classes-helper-font();
-    @include classes-helper-link();
-    @include classes-helper-margin();
-    @include classes-helper-media();
-    @include classes-helper-overflow();
-    @include classes-helper-padding();
-    @include classes-helper-pointer();
-    @include classes-helper-position();
-    @include classes-helper-pull();
-    @include classes-helper-ratio();
-    @include classes-helper-screen-reader();
-    @include classes-helper-size();
-    @include classes-helper-text();
-    @include classes-helper-transition();
-    @include classes-helper-transmation();
-    @include classes-helper-user-select();
-    @include classes-helper-vertical-align();
-
-    // lnf
-    // @include classes-lnf-shadow();
-    // @include classes-lnf-title();
-
-    // icons
-    // @include classes-icons-icons();
-
-    // components
-    @include title-classes();
-
+  // components
+  @include title-classes();
+  @include ol-classes();
+  @include paragraph-classes();
+  @include button-classes();
 }
