--- a/toolkits/sugar/src/scss/component/_all.scss
+++ b/toolkits/sugar/src/scss/component/_all.scss
@@ -1,3 +1,8 @@
 @import 'mixin/all';
 
+@import 'button/all';
+@import 'icon/all';
 @import 'ol/all';
+@import 'paragraph/all';
+@import 'title/all';
+@import 'shadow/all';
