--- a/toolkits/sugar/src/scss/component/icon/class/_icons.scss
+++ b/toolkits/sugar/src/scss/component/icon/class/_icons.scss
@@ -1,8 +1,10 @@
 @mixin classes-icons-icons() {
 
-  $icons: setting('classes.generate.icons');
-  @each $name in $icons {
-     /**
+  @if class-match-namespace('sugar.component.icon') {
+    $icons: setting('classes.generate.icons');
+
+    @each $name in $icons {
+      /**
       * @name 		#{sel(icon-#{$name})}
       * @namespace       sugar.scss.core.class.icons
       * @type        class
@@ -15,9 +17,13 @@
       * @since       2.0.0
       * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
       */
-    .#{sel(icon-#{$name})} {
+      .#{sel(icon-#{$name})
+    }
+
+      {
       @include icon($name);
     }
   }
+}
 
 }
