--- a/toolkits/sugar/src/scss/core/class/_scope.scss
+++ b/toolkits/sugar/src/scss/core/class/_scope.scss
@@ -26,35 +26,52 @@
  * @since           2.0.0
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin scope($scope, $currentScope: setting('classes.generate.scope')) {
-    $scope: test-argument(
-     'Sugar.scope',
-     'scope',
-     'string|list-string',
-     $scope
-    );
-    $currentScope: test-argument(
-     'Sugar.scope',
-     'currentScope',
-     'string|list-string',
-     $currentScope
-    );
+@mixin scope($wantedScope, $currentScope: setting('classes.generate.scope')) {
+  @if scope($wantedScope, $currentScope) {
+    @content;
+  }
+}
 
-    @if $currentScope == null {
-        $currentScope: setting('classes.generate.scope');
-    }
+@function scope(
+  $wantedScope,
+  $currentScope: setting('classes.generate.scope')
+) {
+  $wantedScope: test-argument(
+    'Sugar.scope',
+    'scope',
+    'string|list-string',
+    $wantedScope
+  );
+  $currentScope: test-argument(
+    'Sugar.scope',
+    'currentScope',
+    'string|list-string',
+    $currentScope
+  );
 
-    $generate: false;
+  @if $currentScope == null {
+    $currentScope: setting('classes.generate.scope');
+  }
+
+  $generate: false;
+
+  @if type-of($currentScope) == list {
     @each $scp in $currentScope {
-        @if list-index($scope, $scp) != -1 {
-            $generate: true;
-        }
-    }
-    @if list-index($currentScope, 'all') != -1 {
+      @if $scp == $wantedScope {
         $generate: true;
+      }
     }
 
-    @if $generate {
-        @content;
+    @if list-index($currentScope, $wantedScope) != -1 {
+      $generate: true;
     }
+  } @else {
+    @if $wantedScope == $currentScope {
+      $generate: true;
+    } @else if $currentScope == 'all' {
+      $generate: true;
+    }
+  }
+
+  @return $generate;
 }
