--- a/toolkits/sugar/src/scss/core/size/function/_interpolate.scss
+++ b/toolkits/sugar/src/scss/core/size/function/_interpolate.scss
@@ -36,9 +36,11 @@
 @function interpolate($value, $size) {
   $value: test-argument('Sugar.interpolate', 'value', number, $value);
   $size: test-argument('Sugar.interpolate', 'size', string, $size);
+  
+  $sizes: setting('sizes');
 
   // get what we need to interpolate the value
-  $ratio: setting('sizes.#{$size}');
+  $ratio: map-get($sizes, $size);
 
   @if not $ratio {
     @error ('You have to specify a config.sizes.#{$size} ratio');
