--- a/toolkits/sugar/src/scss/helper/class/_padding.scss
+++ b/toolkits/sugar/src/scss/helper/class/_padding.scss
@@ -1,12 +1,9 @@
 @mixin classes-helper-padding() {
-
   @if class-match-namespace('sugar.helper.padding') {
-
-    $sizes: setting("sizes");
+    $sizes: setting('sizes');
     @each $name, $size in $sizes {
-
-      @if class-match-namespace("sugar.helper.padding.#{$name}") {
-        $cname: sel("p-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.#{$name}') {
+        $cname: sel('p-#{$name}');
         /**
           * @name        #{$cname}
           * @namespace       sugar.scss.core.class
@@ -24,7 +21,7 @@
           * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
         .#{$cname} {
-          @if $name == "default" {
+          @if $name == 'default' {
             &:not(p) {
               padding: space($name);
             }
@@ -34,9 +31,8 @@
         }
       }
 
-
-      @if class-match-namespace("sugar.helper.padding.bottom.#{$name}") {
-        $cname: sel("pb-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.bottom.#{$name}') {
+        $cname: sel('p-b-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -58,9 +54,8 @@
         }
       }
 
-
-      @if class-match-namespace("sugar.helper.padding.top.#{$name}") {
-        $cname: sel("pt-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.top.#{$name}') {
+        $cname: sel('p-t-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -77,14 +72,13 @@
           * @since       1.0.0
           * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
           */
-       .#{$cname} {
+        .#{$cname} {
           padding-top: space($name);
         }
       }
 
-
-      @if class-match-namespace("sugar.helper.padding.left.#{$name}") {
-        $cname: sel("pl-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.left.#{$name}') {
+        $cname: sel('p-l-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -106,9 +100,8 @@
         }
       }
 
-
-      @if class-match-namespace("sugar.helper.padding.right.#{$name}") {
-        $cname: sel("pr-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.right.#{$name}') {
+        $cname: sel('p-r-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -130,9 +123,8 @@
         }
       }
 
-
-      @if class-match-namespace("sugar.helper.padding.side.#{$name}") {
-        $cname: sel("ps-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.side.#{$name}') {
+        $cname: sel('p-s-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -155,9 +147,8 @@
         }
       }
 
-
-      @if class-match-namespace("sugar.helper.padding.y.#{$name}") {
-        $cname: sel("py-#{$name}");
+      @if class-match-namespace('sugar.helper.padding.y.#{$name}') {
+        $cname: sel('p-y-#{$name}');
         /**
           * @name       	#{$cname}
           * @namespace       sugar.scss.core.class
@@ -179,13 +170,11 @@
           padding-bottom: space($name);
         }
       }
-
-
     }
 
-    @if class-match-namespace("sugar.helper.padding.no.top") {
+    @if class-match-namespace('sugar.helper.padding.no.top') {
       /**
-      * @name       	#{sel(no-pt)}
+      * @name       	#{sel(no-p-t)}
       * @namespace       sugar.scss.core.class
       * @class-namespace           sugar.helper.padding.no.top
       * @type        class
@@ -193,20 +182,19 @@
       * Reset **top** padding
       *
       * @example 	html
-      * <div class="#{sel(no-pt)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+      * <div class="#{sel(no-p-t)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
       *
       * @since       1.0.0
       * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
       */
-      .#{sel(no-pt)} {
+      .#{sel(no-p-t)} {
         padding-top: 0 !important;
       }
     }
 
-
-    @if class-match-namespace("sugar.helper.padding.no.right") {
+    @if class-match-namespace('sugar.helper.padding.no.right') {
       /**
-        * @name       	#{sel(no-pr)}
+        * @name       	#{sel(no-p-r)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.padding.no.right
         * @type        class
@@ -214,20 +202,19 @@
         * Reset **right** padding
         *
         * @example 	html
-        * <div class="#{sel(no-pr)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-p-r)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-pr)} {
+      .#{sel(no-p-r)} {
         padding-right: 0 !important;
       }
     }
 
-
-    @if class-match-namespace("sugar.helper.padding.no.bottom") {
+    @if class-match-namespace('sugar.helper.padding.no.bottom') {
       /**
-        * @name       	#{sel(no-pb)}
+        * @name       	#{sel(no-p-b)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.padding.no.bottom
         * @type        class
@@ -235,20 +222,19 @@
         * Reset **bottom** padding
         *
         * @example 	html
-        * <div class="#{sel(no-pb)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-p-b)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-pb)} {
+      .#{sel(no-p-b)} {
         padding-bottom: 0 !important;
       }
     }
 
-
-    @if class-match-namespace("sugar.helper.padding.no.left") {
+    @if class-match-namespace('sugar.helper.padding.no.left') {
       /**
-        * @name       	#{sel(no-pl)}
+        * @name       	#{sel(no-p-l)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.padding.no.left
         * @type        class
@@ -256,20 +242,19 @@
         * Reset **left** padding
         *
         * @example 	html
-        * <div class="#{sel(no-pl)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-p-l)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-pl)} {
+      .#{sel(no-p-l)} {
         padding-left: 0 !important;
       }
     }
 
-
-    @if class-match-namespace("sugar.helper.padding.no.side") {
+    @if class-match-namespace('sugar.helper.padding.no.side') {
       /**
-        * @name       	#{sel(no-ps)}
+        * @name       	#{sel(no-p-s)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.padding.no.side
         * @type        class
@@ -277,21 +262,20 @@
         * Reset **left** and **right** paddings
         *
         * @example 	html
-        * <div class="#{sel(no-ps)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-p-s)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-ps)} {
+      .#{sel(no-p-s)} {
         padding-left: 0 !important;
         padding-right: 0 !important;
       }
     }
 
-
-    @if class-match-namespace("sugar.helper.padding.no.y") {
+    @if class-match-namespace('sugar.helper.padding.no.y') {
       /**
-        * @name       	#{sel(no-py)}
+        * @name       	#{sel(no-p-y)}
         * @namespace       sugar.scss.core.class
         * @class-namespace           sugar.helper.padding.no.y
         * @type        class
@@ -299,18 +283,15 @@
         * Reset **top** and **bottom** paddings
         *
         * @example 	html
-        * <div class="#{sel(no-py)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="#{sel(no-p-y)}" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .#{sel(no-py)} {
+      .#{sel(no-p-y)} {
         padding-top: 0 !important;
         padding-bottom: 0 !important;
       }
     }
-
-
   }
-
 }
