--- a/toolkits/sugar/src/scss/typography/mixin/_all.scss
+++ b/toolkits/sugar/src/scss/typography/mixin/_all.scss
@@ -1,6 +1,7 @@
 @import 'rhythm-width';
 @import 'selection';
 @import 'show-vr';
+@import 'text-ellipsis';
 @import 'text-hide';
 @import 'text-truncate';
 @import 'tf-scope';
