--- a/toolkits/sugar-ui/src/scss/03_generic/_classes.scss
+++ b/toolkits/sugar-ui/src/scss/03_generic/_classes.scss
@@ -6,6 +6,9 @@
 // @include Sugar.classes('sugar.helper.display');
 // @include Sugar.classes('sugar.helper.filter');
 // @include Sugar.classes('sugar.helper.flex');
+body {
+    background-color: blue;
+}
 @include Sugar.classes('sugar.helper.font');
 // @include Sugar.classes('sugar.helper.link');
 @include Sugar.classes('sugar.helper.margin');
@@ -24,11 +27,11 @@
 // @include Sugar.classes('sugar.helper.user-select');
 // @include Sugar.classes('sugar.helper.vertical-align');
 
-@include Sugar.classes('sugar.component.ul');
-@include Sugar.classes('sugar.component.ol');
-@include Sugar.classes('sugar.component.title');
-@include Sugar.classes('sugar.component.paragraph');
-@include Sugar.classes('sugar.component.button');
+// @include Sugar.classes('sugar.component.ul');
+// @include Sugar.classes('sugar.component.ol');
+// @include Sugar.classes('sugar.component.title');
+// @include Sugar.classes('sugar.component.paragraph');
+// @include Sugar.classes('sugar.component.button');
 
 // @include Sugar.classes('sugar.component.icon');
 // @include Sugar.classes('sugar.component.shadow');
