--- a/toolkits/sugar-ui/src/scss/07_molecules/_all.scss
+++ b/toolkits/sugar-ui/src/scss/07_molecules/_all.scss
@@ -4,3 +4,4 @@
  * A molecule response to the same rules has the organisms, unless they cannot contain any other molecules.
  * It normally contains only other atoms.
  */
+@import './s-sugar-ui-search-navigation-web-component';
