--- a/webcomponents/s-filtrable-input/src/scss/_bare.scss
+++ b/webcomponents/s-filtrable-input/src/scss/_bare.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   position: relative;
 }
+
   .s-filtrable-input__list {
     position: absolute;
     top: 100%; left:0;
@@ -10,7 +11,7 @@
     opacity: 0;
     max-width: calc(100vw - 100px);
     pointer-events: none;
-    transition: max-height .2s ease-in-out;
+    min-width: 100%;
 
     .s-filtrable-input__node:focus + &,
     &:focus {
